Finally got a device to test battery optimizations with (TC51 N).  Added code to detect whether there has been a problem (insufficient MX, not a Zebra device etc.).  Some code left in from Oreo testing e.g. /test_service_start for internal server.  Updated build versions so probably requires an up to date version of Android Studio.

--- a/WakeLock_WifiLock_Exerciser/app/src/main/res/values/strings.xml
+++ b/WakeLock_WifiLock_Exerciser/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
         <item>10 seconds</item>
         <item>20 seconds</item>
     </string-array>
+    <string name="message_battery_optimization_error">Failed to set battery optimizations Via MX.  Do you have MX7+, API 24+ and an MX that supports Battery Optimization?</string>
+    <string name="message_zebra_devices_only">This function is only available on Zebra devices running MX7+</string>
 </resources>
